# slack-xblock-tutor-plugin

./: .gitignore  .hatch_build.py  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml
tutorslack_xblock_tutor_plugin/: plugin.py  test_xblock_development.py
tutorslack_xblock_tutor_plugin/patches/: openedx-common-dockerfile-build-extra  openedx-common-settings.txt  openedx-lms-common-advanced-components
