# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-contrib-slack-xblock-tutor-plugin"
description = "slack-xblock-tutor-plugin plugin for Tutor"
authors = [
  { name = "Team Blue"}, 
  { email = "teamblue@example.com" },
]
license = { text = "MIT" }

readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

]
dependencies = [
    "tutor>=19.0.0,<20.0.0",
]
optional-dependencies = { dev = ["tutor[dev]>=19.0.0,<20.0.0"] }

# These fields will be set by hatch_build.py
dynamic = ["version"]

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Documentation = "https://github.com/3N61N33R/slack-xblock-tutor-plugin#readme"
Issues = "https://github.com/3N61N33R/slack-xblock-tutor-plugin/issues"
Source = "https://github.com/3N61N33R/slack-xblock-tutor-plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatch-specific configuration
[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["tutorslack_xblock_tutor_plugin"]

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutorslack_xblock_tutor_plugin", ".hatch_build.py"]
exclude = ["tests*"]

[project.entry-points."tutor.plugin.v1"]
slack-xblock-tutor-plugin = "tutorslack_xblock_tutor_plugin.plugin"
